# qroma-project-template

./: .gitignore  .gitmodules  DIRECTORY-LAYOUT.md  GET-STARTED.md  README.md  ROADMAP.md  RUNNING-A-PROJECT.md  build-everything.bat  qroma-template.toml  qroma-test.toml  qroma.toml  qroma.yaml  sample.content.txt
.github/workflows/: main.yml  test-deploy.yml
apps/: README.md
apps/py-qroma-io/: .gitignore  README.md  hello_qroma.py  py_qroma_control.py  py_qroma_monitor.py  pyproject.toml  qroma_math.py  qroma_monitor.py  settings.py
apps/py-qroma-project/: README.md  hello_qroma.py  py_qroma_filesystem.py  settings.py
dev-io/protobufs/: README.md  docker-protobuf-compile.bat  docker-protobuf-compile.zsh
device-boards/: README.md
device-io/protobufs/: README.md  docker-protobuf-compile.zsh
devices/: README.md
devices/esp32-arduino-hello-qroma/: hello-qroma.ino
firmware/: README.md
firmware/esp32-qroma-project/: platformio.ini  qroma-project.ino
manufacturing/: README.md
manufacturing/bill-of-materials/: README.md
manufacturing/construction/: README.md
manufacturing/parts/: README.md
project-template-docs/: project-layout.md
protobufs/: README.md
protobufs/protofiles-in/: hello-qroma.options  hello-qroma.proto  my-project-messages.options  my-project-messages.proto
sites/: README.md
sites/site-www-qroma-project/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebar-advanced.js  sidebar-get-started.js
sites/www-qroma-project/: docusaurus.config.js  package.json  sidebar-advanced.js  sidebars.js
(+202 files in other folders)
