[tool.poetry]
name = "py-qroma-io"
version = "0.1.0"
description = ""
authors = ["Albert Boehmler <ajboehmler@gmail.com>"]
#packages = [{include = "py_qroma"}]

[tool.poetry.dependencies]
python = "^3.11"
py-qroma = {path = "../../../../py-qroma", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
