[tool.poetry]
name = "py-qroma-io"
version = "0.1.0"
description = ""
authors = ["Albert Boehmler <ajboehmler@gmail.com>"]
#packages = [{include = "py_qroma"}]

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "3.20.3"
#py-qroma = {path = "C:/Users/ajb/Projects/qromatech/py-qroma", develop = true}
py-qroma = {git = "https://github.com/qromatech/py-qroma.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
